refactored. miw-upm/goa#130